added frontend and response, html. little changes on css

--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                     <a class="nav-link" href="#">STRONA GŁÓWNA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">O MNIE</a>
+                    <a class="nav-link" href="#about">O MNIE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">PORTFOLIO</a>
+                    <a class="nav-link" href="#portfolio">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">BLOG</a>
+                    <a class="nav-link" href="#blog">BLOG</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">KONTAKT</a>
+                    <a class="nav-link" href="#contact">KONTAKT</a>
                 </li>
             </ul>
         </div>
@@ -58,7 +58,6 @@
         <p>Projektant, Programista, Developer</p>
         <div class="social">
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-youtube"></i></a>
             <a href="#"><i class="fa fa-instagram"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
@@ -81,19 +80,24 @@
             </div>
             <div class="col-lg-8 text-justify">
                 <div class="about-content">
-                    <p class="content-header">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit dolor
-                        assumenda cum commodi inventore eveniet sint, repudiandae debitis modi eaque asperiores culpa,
-                        aspernatur deserunt! Modi voluptatum ipsam asperiores explicabo cupiditate! Lorem ipsum dolor,
-                        sit amet consectetur adipisicing elit. Suscipit dolor
-                        assumenda cum commodi inventore eveniet sint, repudiandae debitis modi eaque asperiores culpa,
-                        aspernatur deserunt! Modi voluptatum ipsam asperiores explicabo cupiditate!</p>
+                    <p class="content-header">Mam na imię Andrzej. Hobbystycznie zajmuję się tworzeniem stron
+                        internetowych oraz internetową reklamą. Spod moich palców
+                        wyszło ponad wiele stron internetowych. Obecna strona na której się znajdujesz została stworzona
+                        przy pomocy
+                        technologii HTML, CSS, JavaScript oraz BootStrap z zachowaniem obecnych trendów. Zapraszam do
+                        przeczytania moich artykułów na blogu. Dodatkowo zajmuje się reklamą na Facebook Ads oraz Google
+                        Ads.
+                    </p>
                     <p class="content-body">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum, recusandae eveniet placeat
-                        tempore, debitis optio pariatur libero iste totam amet, adipisci quas perferendis aliquid
-                        repudiandae? Nisi voluptatibus odio laboriosam nobis! orem, ipsum dolor sit amet consectetur
-                        adipisicing elit. Ipsum, recusandae eveniet placeat
-                        tempore, debitis optio pariatur libero iste totam amet, adipisci quas perferendis aliquid
-                        repudiandae? Nisi voluptatibus odio laboriosam nobis!
+                        Jeśli chciałbyś mieć profesjonalną stronę internetową, która jednocześnie byłaby
+                        zooptymalizowana pod kątem wyszukiwarek SEO oraz responsywna jak najszybciej zapraszam do
+                        kontaktu.
+                        Służe pomocą z doborem odpowiedniego wyglądu do dziedziny jaką strona ma reprezentować.
+                        Krótkie terminy realizacji oraz konkurencyjne ceny. U mnie dostaniesz indywidualny projekt
+                        graficzny,
+                        responsywność, optymalizację SEO, odpowiednie zabezpieczenia, możliwość dalszej współpracy.
+                        Jeśli potrzebujesz bloga bez problemu możemy go wykonać na platformie wordpress, dzięki czemu
+                        edycja strony nie będzie problemem dla użytkownika.
                     </p>
                 </div>
             </div>
@@ -133,21 +137,22 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="blog-content mb-4">
-                    <img src="img/test.jpg" alt="">
-                    <p class="blog-heading">Subsrcibe me AND other</p>
-                    <p class="blog-para">Subsrcibe me AND other</p>
+                    <img src="img/response.png" alt="">
+                    <p class="blog-heading"><a href="blog/response.html">RWD co to oznacza?</a></p>
+                    <p class="blog-para">Czym jest responsywność i dlaczego jest tak ważna?</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="blog-content mb-4">
-                    <img src="img/test.jpg" alt="">
-                    <p class="blog-heading">Subsrcibe me AND other</p>
-                    <p class="blog-para">Subsrcibe me AND other</p>
+                    <img src="img/frontend.jpg" alt="">
+                    <p class="blog-heading"><a href="blog/frontend.html"> Jak zostać Front-Endem?</a></p>
+                    <p class="blog-para">Tutaj postaram się przekazać informacje, które powinniście wiedzieć, żeby
+                        zostać Front-Endem.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="blog-content mb-4">
-                    <img src="img/test.jpg" alt="">
+                    <img src="img/frontend.jpg" alt="">
                     <p class="blog-heading">Subsrcibe me AND other</p>
                     <p class="blog-para">Subsrcibe me AND other</p>
                 </div>
@@ -162,10 +167,10 @@
                 <div class="contact-form">
                     <h2> SKONTAKTUJ SIĘ ZE MNĄ</h2>
                     <ul class="contact-detail">
-                        <li><span>ROAD, STREET</span></li>
-                        <li><span>PIETRZYKOWICE</span></li>
-                        <li><span>PHONE 62634662</span></li>
-                        <li><span>example@mail</span></li>
+                        <li><span>PIETRZYKOWICE 16/4</span></li>
+                        <li><span>55-093 Pietrzykowice</span></li>
+                        <li><span>+48 782724539</span></li>
+                        <li><span>andrzej.perski@hotmail.com</span></li>
                     </ul>
                 </div>
             </div>
@@ -195,6 +200,7 @@
 </section>
 <section id="footer">
     <div class="container text-center">
+        <p>Polityka prywatności</p>
         <p>Strona wykonana <i class="fa fa-heart-o"></i> przez hello andrzej</p>
     </div>
 </section>
